# GradoIA-URJC

./: README.md  estructura.txt  estructura_limpia.txt
.obsidian/: app.json  appearance.json  community-plugins.json  graph.json  workspace.json
1º/: Paradigmas de programación.md
1º/FAC/: PROYECTO_grupo3.circ  Tema 7.md
1º/Programación II/: Ficheros binarios.md  (+8 more)
2º/Primer cuatri/Estructura de Datos/CódigoED/Twitter/: CMakeLists.txt  main.c  tArbolTweets.c  tArbolTweets.h  tElemento.c  tElemento.h  tHashtag.h  tListaTweets.c  tTweet.c
2º/Primer cuatri/Estructura de Datos/CódigoED/implementacionesListas/: CMakeLists.txt  tElemento.c  tElemento.h  tListaCircular.c  tListaDoubleEnlazada.c  tListaDoubleEnlazada.h  tListaDoubleEnlazadaPunteroInitEnd.c  tListaDoubleEnlazadaPunteroInitEnd.h  tListaEnlazadaSimple.c  tListaOrdenada.c  tListaOrdenada.h
Otros/: Prompts Útiles.md
Primero/: Paradigmas de programación.md
Probabilidad y Estadística/: Trabajo_Estadística.R
Programación Declarativa/: Programación Declarativa.md  Topic 5 - TADs y recursividad.md  Topic 5.md
Programación II/: Programación II - Índice.md  Práctica 4 - Agenda con ficheros binarios.md  Práctica 6 - POO.md  Práctica 7 - POO (Herencia).md  Práctica 8 - Polimorfismos y clases abstractas.md  Tema 10 - Abstracción.md  Tema 11 - TADs.md  Tema 8 - Tipos enumerados y registros.md  Tema 9 - Operaciones con ficheros.md  Tema 9.md
Revisiones/: readme_revisiones
Segundo/Primer cuatri/Estructura de Datos/CódigoED/Listas/: CMakeLists.txt  tElemento.h  tListaCabecerayFinal.c  tListaCircular.c  tListaDobEnlace.c  tListaDobEnlace.h  tListaEnlazadaSimple.c  tListaOrdenada.h
Ética y Legislación en IA/: Ética y Legislación de IA.md
(+411 files in other folders)
